# Redbrick_assignment

./: README.md
task_assignment_coop/: README.md
task_assignment_coop/mini-renderer/: CMakeLists.txt  example.html
task_assignment_coop/mini-renderer/include/: html_element.h  html_parser.h  utils.h
task_assignment_coop/mini-renderer/src/: html_element.cpp  html_parser.cpp  main.cpp
task_assignment_coop/mini-renderer/tests/: test_main.cpp
